beginner maps and others

--- a/index.html
+++ b/index.html
@@ -97,18 +97,24 @@
         <section data-state="make-it-pop">
           <section>
             <ul class=>
-              <h3>Konstrueerime paremaid kaarte</h3>
-              <p class="italic">Mental models</p>
-              <img src="./gtamap.JPEG" />
-                 <aside class="notes"> "individuals develop mental models of the systems and processes with which they interact"
-                  Miks ma panin siia tavalise kaardi pildi? Sellepärast et mentaalsed mudelid täidavad sama eesmärki, mida maailma tähistav kaart - need on selleks, et paremini oma käitumist juhtida, et me teaksime kuhu minna, kuidas orienteeruda keskkonnas, et oma eesmärke optimaalselt täita</aside>
+              <h3>Kuidas uusi asju õppida?</h3>
+              <img class="fragment" src="images/new_place.jpg" />
+              <p class="fragment">Uus valdkond = tundmatu paik</p>
+              
             </ul>
             <aside class="notes">Ja ma ei mõtle, et meil on ajus galerii, kus me salvestame ja võtame kaarte. Need kaardid on väga dünaamilised, ei pruugi igas olukorras meile saadaval olla, muutuvad ajas ja kohas jne.</aside>
             <aside class="notes">Mida asjakohasemad kaardid, seda parem arusaam ja ennustusjõud mingi süsteemi toimimisest, seda enam võimalusi süsteemis tegutseda ja seda mõjutada</aside>
             <aside class="notes">Pmst meie töö õpilastena on efektiivsemaid kaarte luua, ja õpetajatena abistada paremate kaartide loomisel</aside>
           </section>
+          <section>
+              <img src="./gtamap.JPEG" />
+                 <aside class="notes"> "individuals develop mental models of the systems and processes with which they interact"
+                  Miks ma panin siia tavalise kaardi pildi? Sellepärast et mentaalsed mudelid täidavad sama eesmärki, mida maailma tähistav kaart - need on selleks, et paremini oma käitumist juhtida, et me teaksime kuhu minna, kuidas orienteeruda keskkonnas, et oma eesmärke optimaalselt täita</aside>
+              <p class="italic">Mental models</p>
+          </section>
           <section>Füüsikaõpetaja kaardid füüsikast vs minu kaardid füüsikast</section>
-          <section><div>Keelemudel kui abiline aitamaks detailsemaid ja efektiivsemaid kaarte arendada</div>
+          <section><div>Keelemudel tutvustab meile ümbrust ja aitab kaardistada</div>
+            <img class="r-stretch" src="images/guide.png" />
             <aside class="notes">Meie kaaskartograaf, kes aitab lihvida ja laiendada meie kaarte</aside>
           </section>
         </section>
@@ -169,7 +175,8 @@
           
         </section>
         <section>
-          <section><h1>Keelemudelite kasutamise ohukohad</h1></section>
+          <section><h1>Keelemudelite kasutamise ohukohad</h1>
+          <img src="images/gpt_meme.webp" /></section>
           <section>
             Limitatsioonid - mida keelemudel ei ole
             <ul>
