--- a/index.html
+++ b/index.html
@@ -108,12 +108,11 @@
         </section>
         <section data-state="make-it-pop">
           <section>
-            <ul class=>
-              <h3>Kuidas uusi asju õppida?</h3>
-              <img class="fragment" src="images/new_place.jpg" />
+            <h3>Kuidas uusi asju õppida?</h3>
+          </section>
+          <section>
+              <img src="images/new_street.webp" />
               <p class="fragment">Uus teema = tundmatu paik</p>
-              
-            </ul>
             <aside class="notes">Ja ma ei mõtle, et meil on ajus galerii, kus me salvestame ja võtame kaarte. Need kaardid on väga dünaamilised, ei pruugi igas olukorras meile saadaval olla, muutuvad ajas ja kohas jne.</aside>
             <aside class="notes">Mida asjakohasemad kaardid, seda parem arusaam ja ennustusjõud mingi süsteemi toimimisest, seda enam võimalusi süsteemis tegutseda ja seda mõjutada</aside>
             <aside class="notes">Pmst meie töö õpilastena on efektiivsemaid kaarte luua, ja õpetajatena abistada paremate kaartide loomisel</aside>
@@ -122,7 +121,7 @@
               <img src="./gtamap.JPEG" />
                  <aside class="notes"> "individuals develop mental models of the systems and processes with which they interact"
                   Miks ma panin siia tavalise kaardi pildi? Sellepärast et mentaalsed mudelid täidavad sama eesmärki, mida maailma tähistav kaart - need on selleks, et paremini oma käitumist juhtida, et me teaksime kuhu minna, kuidas orienteeruda keskkonnas, et oma eesmärke optimaalselt täita</aside>
-              <p class="fragment italic">Mental models</p>
+              <p class="fragment">Õppimine = avastamine ja kaardistamine</p>
           </section>
           <section>Füüsikaõpetaja kaardid füüsikast vs minu kaardid füüsikast</section>
           <section><div>Keelemudel tutvustab meile ümbrust ja aitab kaardistada</div>
@@ -159,7 +158,7 @@
               <img class="fragment" src="./images/FewContentGood.png" />
             </div>
             <aside class="notes">Vastuse kalibreerimine nii vormiliselt kui sisuliselt</aside>
-          </section>  
+          </section>
           <section>
             Anna infot kus sa oled, mida sa tead, miks ja kuhu minna tahad
             <div class="r-stack">
