--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <section>
           <section><h1>Parimad praktikad</h1></section>
           <section>
-              <h3>Ole detailne ja spetsiifiline</h3>  
+              <h3>Ole detailne ja spetsiifiline</h3>
               <aside class="notes">90% GPT suutlikkusest sõltub sellest kui täpselt ja detailselt sa ise tead mida tahad ja oskad seda väljendada</aside>
               <aside class="notes">Saad seda mida küsid. Mida paremini ja detailsemalt sa tead ja kirjeldad mida sa tahad, seda suurema tõenäosusega saad ka</aside>
               <aside class="notes">Kuidas siis ikkagi? Mõned näited</aside>
@@ -156,6 +156,7 @@
               <img class="fragment" src="./images/FewShotBad.png" />
               <img class="fragment" src="./images/FewShotGood.png"/>
               <img class="fragment" src="./images/FewContentGood.png" />
+              <img class="fragment" src="./images/aripaev.png" />
             </div>
             <aside class="notes">Vastuse kalibreerimine nii vormiliselt kui sisuliselt</aside>
           </section>
@@ -181,9 +182,10 @@
               <img class="fragment" src="./images/StyleGood.png"/>
             </div>
           </section>
+          <section>Aktiivne õppimine läbi vestluse</section>
           <section>
             <div class="r-stack">
-              <img class="fragment" src="images/convo/convo1.png"/>
+              <img src="images/convo/convo1.png"/>
               <img class="fragment" src="images/convo/convo2.png"/>
               <img class="fragment" src="images/convo/convo3.png"/>
               <img class="fragment" src="images/convo/convo4.png"/>
@@ -204,7 +206,7 @@
           </section>
         </section>
         <section>
-          <section><h1>Keelemudelite kasutamise ohukohad</h1>
+          <section><h1>Ohukohad ja limitatsioonid</h1>
           <img src="images/gpt_meme.webp" /></section>
           <section>
             Limitatsioonid - mida keelemudel ei ole
