--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               käitumist juhtida, et me teaksime kuhu minna, kuidas orienteeruda
               keskkonnas, et oma eesmärke optimaalselt täita
             </aside>
-            <p class="fragment">Õppimine = avastamine ja kaardistamine</p>
+            <p class="fragment">Õppimine = tundmatu paiga avastamine ja kaardistamine</p>
           </section>
           <section>
             <div style="max-height: 550px;" class="r-stack">
