Deletion of pointless sections

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <section class="intro">
           <div style="display: flex; flex-direction: column">
             <span style="font-size: 1.4em; font-weight: 600"
-              >Kuidas vestelda tehisaruga?</span
+              >Kuidas suhelda tehisaruga?</span
             >
             <span>Sören Pruul</span>
-            <span style="font-weight: 300;">25.11.2024</span>
+            <span style="font-weight: 300">25.11.2024</span>
           </div>
         </section>
         <section>
@@ -44,7 +44,16 @@
               <p class="unboxed">uus töökaaslane</p>
             </div>
             <img src="./images/claude.png" />
-            <aside class="notes">Vajab kogu aeg väga selgeid juhiseid</aside>
+            <aside class="notes">
+              Genius: The model has remarkable abilities and can handle complex
+              tasks, but it operates based on patterns in data rather than
+              conscious understanding. Amnesiac: It doesn't remember previous
+              interactions or conversations unless the information is included
+              again, so context must be provided each time. New Worker: It needs
+              clear, precise instructions to deliver the best results, much like
+              onboarding a new employee who is eager to help but unfamiliar with
+              the nuances of the job.
+            </aside>
           </section>
           <section data-auto-animate>
             <div class="word-box">
@@ -56,22 +65,40 @@
           </section>
           <section>
             <ul>
-              <h2>Keelemudel (LLM)</h2>
+              <div class="row">
+                <h2 class="keelemudel">Keelemudel</h2>
+                <span class="italic" style="margin-bottom: 20px"
+                  >(Large language model)</span
+                >
+              </div>
+              <li class="fragment">
+                Treenitud tohutul hulgal inimese loodud andmetel
+              </li>
+              <li class="fragment">Ennustab järgmise sõna</li>
               <li class="fragment">
                 Pole tegelikult 'intelligentne', ei 'mõista'
               </li>
-              <li class="fragment">
-                Treenitud tohutul hulgal interneti andmetel
-              </li>
-              <li class="fragment">Ennustab järgmist sõna</li>
-              <li class="fragment">
-                Imiteerib inimintelligentsi, 'petab' meid hästi ära
-              </li>
             </ul>
             <aside class="notes">
-              Nad ei saa tegelt aru, neil pole teadvust, opereerivad tunnevad
-              mustreid. Rohkem nagu geniaalsed assistendid mitte kõige
-              originaalsemad mõtlejad.
+              Kiirel lugejal võtaks treeningandmestiku läbi lugemine kuskil
+              57000+ aastat, kui ta iga päev 8h loeks. Keelemudeli sõnavara ning
+              selle iga sõna kohta on tõenäosus. Iga sõna keelemudeli sõnavaras
+              saab tõenäouses ja kõige suuremaga osutub järgmiseks sõnaks.
+              Kuidas aga need tõenäouses arvutatakse, seda ma teile valetama ei
+              hakka. Imiteerib inimintelligentsi, petab meid hästi ära. Paistab
+              nagu nad kasutaksid loogilist mõtlemist nagu meie, aga tegelt
+              paneb sõnu kokku.
+            </aside>
+          </section>
+          <section>
+            <img src="images/railtracks.jpeg" />
+            <aside class="notes">
+              Hea metafoor ennustamisest aru saamiseks on kujutleda rongijuhti,
+              kes laob enda ette rööpaid maha, ise samal ajal nende peal sõites.
+              Iga järgnev rööbas mõjutab kõiki teisi tulevasi rööpaid, rööpaid
+              tagasi võtta/ 'kustutada' ei saa, nii et väike viga rööpa
+              mahapanekus võib oluliselt kogu vastust mõjutada, ja valele teele
+              viia
             </aside>
           </section>
           <section>
@@ -80,9 +107,7 @@
             >
             <img src="images/gpt3_trainingdata.png" />
           </section>
-
           <section><img src="./images//brainVsLlm.png" /></section>
-
           <section>
             <aside class="notes">
               Metafoor kratile. Kratt toob sulle struktureeritud
@@ -106,21 +131,11 @@
           ></section>
           <section>
             <ul>
-              <h2>Omadused</h2>
-              <li class="fragment salespoint">
-                24/7 ligipääs infole ja seletustele
-              </li>
-              <li class="fragment">Ülimalt suur arvutusvõimsus</li>
-              <li class="fragment salespoint">
-                Personaliseeritud, rätseplahendus just sulle
-              </li>
-            </ul>
-          </section>
-          <section>
-            <ul>
               <h2>Võimalused</h2>
               <li class="fragment">Mustandite genereerimine</li>
-              <li class="fragment">'Kuivade' dokumentide kokkuvõte</li>
+              <li class="fragment">
+                Kokkuvõtted (tehnilised dokumendid, toorandmed jne)
+              </li>
               <li class="fragment">
                 Aitab mõtlemist lihvida - pakub alternatiive ja vastuargumente
               </li>
@@ -128,54 +143,6 @@
               <li class="fragment">Uute teemade õppimine</li>
               <div class="fragment">...</div>
             </ul>
-          </section>
-        </section>
-        <section data-state="make-it-pop">
-          <section>
-            <h3>Kuidas uusi asju õppida?</h3>
-          </section>
-          <section>
-            <img src="images/new_street.webp" />
-            <p class="fragment">Uus teema = tundmatu paik</p>
-            <aside class="notes">
-              Ja ma ei mõtle, et meil on ajus galerii, kus me salvestame ja
-              võtame kaarte. Need kaardid on väga dünaamilised, ei pruugi igas
-              olukorras meile saadaval olla, muutuvad ajas ja kohas jne.
-            </aside>
-            <aside class="notes">
-              Mida asjakohasemad kaardid, seda parem arusaam ja ennustusjõud
-              mingi süsteemi toimimisest, seda enam võimalusi süsteemis
-              tegutseda ja seda mõjutada
-            </aside>
-            <aside class="notes">
-              Pmst meie töö õpilastena on efektiivsemaid kaarte luua, ja
-              õpetajatena abistada paremate kaartide loomisel
-            </aside>
-          </section>
-          <section>
-            <img src="./images/gtamap.JPEG" />
-            <aside class="notes">
-              "individuals develop mental models of the systems and processes
-              with which they interact" Miks ma panin siia tavalise kaardi
-              pildi? Sellepärast et mentaalsed mudelid täidavad sama eesmärki,
-              mida maailma tähistav kaart - need on selleks, et paremini oma
-              käitumist juhtida, et me teaksime kuhu minna, kuidas orienteeruda
-              keskkonnas, et oma eesmärke optimaalselt täita
-            </aside>
-            <p class="fragment">Õppimine = tundmatu paiga avastamine ja kaardistamine</p>
-          </section>
-          <section>
-            <div style="max-height: 550px;" class="r-stack">
-              <img class="fragment" src="images/minu.png" />
-              <img class="fragment" src="images/fysa6psi.png" />
-            </div>
-          </section>
-          <section>
-            <div>Keelemudel tutvustab meile ümbrust ja aitab kaardistada</div>
-            <img class="r-stretch" src="images/guide.png" />
-            <aside class="notes">
-              Meie kaaskartograaf, kes aitab lihvida ja laiendada meie kaarte
-            </aside>
           </section>
         </section>
         <section>
@@ -229,8 +196,16 @@
           <section>
             Anna infot kus sa oled, mida sa tead, miks ja kuhu minna tahad
             <div class="r-stack">
-              <img style="max-height: 550px; margin-top: 1rem;" class="fragment" src="./images/ZoDvisual1.png" />
-              <img style="max-height: 550px; margin-top: 1rem;" class="fragment" src="./images/ZoDvisual2.png" />
+              <img
+                style="max-height: 550px; margin-top: 1rem"
+                class="fragment"
+                src="./images/ZoDvisual1.png"
+              />
+              <img
+                style="max-height: 550px; margin-top: 1rem"
+                class="fragment"
+                src="./images/ZoDvisual2.png"
+              />
 
               <img class="fragment" src="./images/ZoDBad.png" />
               <img class="fragment" src="./images/ZoDGood.png" />
@@ -241,16 +216,16 @@
             </aside>
           </section>
           <section>
-            Lase keelemudelil 'mõelda'
+            Lase keelemudelil 'mõelda' enne vastust
             <p class="italic">chain of thought</p>
             <div class="r-stack">
               <img class="fragment" src="./images/CoTBad.png" />
               <img class="fragment" src="./images/CoTGood.png" />
             </div>
             <aside class="notes">
-              Mulle meeldib kasutada, kujutleda kuidas mingi valdkonna
-              spetsialist võiks mõelda. Lisaks annab täpsemaid vastuseid, sest
-              saab iga vaheetapi juures peatuda ja hinnata
+              Annab täpsemaid vastuseid, sest selgitab iga sammu ja vastuse
+              andmiseks on tal parem kontekst. Mulle meeldib kasutada, kujutleda
+              kuidas mingi valdkonna spetsialist võiks mõelda.
             </aside>
           </section>
           <section>
@@ -293,25 +268,31 @@
             <img src="images/gpt_meme.webp" />
           </section>
           <section data-auto-animate>
-            <div>
-              <ul>
-                <h2>Keelemudel (LLM)</h2>
-                <li>Pole tegelikult 'intelligentne', ei 'mõista'</li>
-                <li>Treenitud tohutul hulgal interneti andmetel</li>
-                <li>Ennustab järgmist sõna</li>
-                <li>Imiteerib inimintelligentsi, 'petab' meid hästi ära</li>
-              </ul>
-            </div>
+            <ul>
+              <div class="row">
+                <h2 class="keelemudel">Keelemudel</h2>
+                <span class="italic" style="margin-bottom: 20px"
+                  >(Large language model)</span
+                >
+              </div>
+              <li>Treenitud tohutul hulgal inimese loodud andmetel</li>
+              <li>Ennustab järgmise sõna</li>
+              <li>Pole tegelikult 'intelligentne', ei 'mõista'</li>
+            </ul>
           </section>
 
           <section data-auto-animate>
             <div class="column">
               <ul class="small-boxed-desc">
-                <h2>Keelemudel (LLM)</h2>
+                <div class="row">
+                  <h2 class="keelemudel">Keelemudel</h2>
+                  <span class="italic" style="margin-bottom: 20px"
+                    >(Large language model)</span
+                  >
+                </div>
+                <li>Treenitud tohutul hulgal inimese loodud andmetel</li>
+                <li>Ennustab järgmise sõna</li>
                 <li>Pole tegelikult 'intelligentne', ei 'mõista'</li>
-                <li>Treenitud tohutul hulgal interneti andmetel</li>
-                <li>Ennustab järgmist sõna</li>
-                <li>Imiteerib inimintelligentsi, 'petab' meid hästi ära</li>
               </ul>
               <svg
                 class="fragment"
@@ -442,20 +423,56 @@
           <section>
             <p>Ekspertiis + juhiste selgus</p>
             <div class="column">
-              <svg width="46" height="114" viewBox="0 0 46 114" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M23 9.58301L23 103.5" stroke="black" stroke-width="3.83333" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M36.4173 90.083L23.0007 103.5L9.58398 90.083" stroke="black" stroke-width="3.83333" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                <img src="images/chatgpt.png" />
-                <svg width="46" height="114" viewBox="0 0 46 114" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M23 9.58301L23 103.5" stroke="black" stroke-width="3.83333" stroke-linecap="round" stroke-linejoin="round"/>
-                  <path d="M36.4173 90.083L23.0007 103.5L9.58398 90.083" stroke="black" stroke-width="3.83333" stroke-linecap="round" stroke-linejoin="round"/>
-                  </svg>
+              <svg
+                width="46"
+                height="114"
+                viewBox="0 0 46 114"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M23 9.58301L23 103.5"
+                  stroke="black"
+                  stroke-width="3.83333"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M36.4173 90.083L23.0007 103.5L9.58398 90.083"
+                  stroke="black"
+                  stroke-width="3.83333"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+              <img src="images/chatgpt.png" />
+              <svg
+                width="46"
+                height="114"
+                viewBox="0 0 46 114"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M23 9.58301L23 103.5"
+                  stroke="black"
+                  stroke-width="3.83333"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M36.4173 90.083L23.0007 103.5L9.58398 90.083"
+                  stroke="black"
+                  stroke-width="3.83333"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
             </div>
-            
-              <p>Valideerimine</p>
-              <p>Edasitöötlemine</p>
-            
+
+            <p>Valideerimine</p>
+            <p>Edasitöötlemine</p>
+
             <aside class="notes">
               Vastused sõltuvad nii prompti sisu kvaliteedist kui ka selgusest.
               Lisaks sellele on vastuse analüüs ja valideerimine meie teha ja
